# aladhan-MCP-server

./: .gitignore  LICENSE  README.md  pyproject.toml
aladhan_mcp/: server.py  utils.py
aladhan_mcp/tools/: __init__.py  calendars.py  date_conversion.py  prayer_times.py  qibla.py
tests/: __init__.py  test_date_conversion.py  test_utils.py
